Stop duplicate scroll bars on firefox

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -186,7 +186,6 @@ a:hover {
 }
 
 .post .highlight {
-  overflow-x: scroll;
   -ms-overflow-style: none;  // IE 10+
 }
 
